--- a/app.json
+++ b/app.json
@@ -21,10 +21,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF",
-        "package": "com.ashif.newsapp"
-      }
+        "foregroundImage": "./assets/logo.png",
+        "backgroundColor": "#FFFFFF"
+      },
+      "package": "com.ashif.newsapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
